objects/TASKRAY__trFlexFilter__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the available Flex Filters.</description>
    <fields>
        <fullName>TASKRAY__trCustomName__c</fullName>
        <description>The name that end users with access to this Flex Filter will see in the left sidebar.</description>
        <label>Custom Name (Premium Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFFAPIName__c</fullName>
        <description>The API Name of the Flex Filter Field</description>
        <label>API name of Flex Filter Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFFObjectName__c</fullName>
        <description>The object of the Flex Filter Field</description>
        <label>Object of Flex Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFFParent__c</fullName>
        <description>The parent object of the Flex Filter Field (Project or Task)</description>
        <label>Flex Filter Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFlexFilterSet__c</fullName>
        <description>The Flex Filter Set this Flex Filter will appear in.</description>
        <label>Flex Filter Set</label>
        <referenceTo>TASKRAY__trFlexFilterSet__c</referenceTo>
        <relationshipLabel>Flex Filter</relationshipLabel>
        <relationshipName>Flex_Filter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSortOrder__c</fullName>
        <description>The order which the Flex Filter will appear in the Flex Filter Set, top-to-bottom.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flex Filter</label>
    <nameField>
        <label>Flex Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flex Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>